helm/charts/karakeep/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep
  labels:
    app: karakeep
  annotations:
    keel.sh/policy: "force"
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep
  template:
    metadata:
      labels:
        app: karakeep
    spec:
      containers:
        - name: karakeep
          image: ghcr.io/karakeep-app/karakeep:release
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: karakeep-data
      volumes:
        - name: karakeep-data
          persistentVolumeClaim:
            claimName: karakeep-data
