helm/charts/karakeep/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep
spec:
  selector:
    app: karakeep
  ports:
    - port: 3000
