helm/charts/karakeep/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep
spec:
  rules:
    - host: keep.koudijs.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karakeep
                port:
                  number: 3000
  tls:
    - secretName: keep-koudijs-lan
      hosts:
        - keep.koudijs.lan
